# ppx

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  lint.yml  publish.yml  test.yml  tests.yml
docs/: Makefile  PXDataset.rst  ann_solo.ipynb  basicUsage.rst  cli.rst  conf.py  examples.rst  index.rst  usage.rst
docs/_static/: custom.css
docs/api/: functions.rst  index.rst  massive.rst  pride.rst
ppx/: MSVDataset.py  PXDataset.py  __init__.py  config.py  dataset.py  factory.py  fasta.py  ftp.py  massive.py  ppx.py  pride.py  project.py  utils.py
tests/: conftest.py  test_PXDataset.py
tests/data/: params.xml  pride_files_path_response.json  pride_files_response.json  pride_project_response.json
tests/system_tests/: test_cli.py
tests/unit_tests/: test_cloud.py  test_config.py  test_download.py  test_find_project.py  test_list_projects.py  test_massive.py  test_pride.py  test_utils.py  utils.py
