[metadata]
name = ppx
author = William E. Fondrie
author_email = fondriew@gmail.com
description = A Python interface to proteomics data repositories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wfondrie/ppx
project_urls =
    Documentation = https://ppx.readthedocs.io
    Bug Tracker = https://github.com/wfondrie/ppx/issues
    Discussion Board = https://github.com/wfondrie/ppx/discussions
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.25.1
    tqdm>=4.60.0

[options.extras_require]
docs =
    numpydoc>=1.0.0
    sphinx-argparse>=0.2.5
    pydata-sphinx-theme>=0.4.3
    nbsphinx>=0.7.1
    ipykernel>=5.3.0
    recommonmark>=0.5.0
dev =
    pre-commit>=2.7.1
    black>=19.10b0

[options.entry_points]
console_scripts =
    ppx = ppx.ppx:main
